objects/USA_Workflow__c.object
<CustomObject>
    <description>Used to present and manage new item workflow process in PRUSA Briefcase
USA BRIEFCASE object</description>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Available__c</fullName>
        <formula>IF(OR(Inactive__c = TRUE, USA_Expiration_Date__c &lt; TODAY()), FALSE, TRUE)</formula>
        <label>Mobile Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship (foreign Key) to the Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USA_Workflows</relationshipLabel>
        <relationshipName>Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Brand__c</fullName>
        <description>The brand to which this workflow is related</description>
        <inlineHelpText>The brand to which this workflow is related</inlineHelpText>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Description__c</fullName>
        <description>The workflow text.  E.g. &quot;Sell in Malibu Sparkling&quot;</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_Expiration_Date__c</fullName>
        <description>The Date the workflow expires</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>USA_Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Presentation_Outcome__c</fullName>
        <label>Presentation Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#009900</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                    <color>#FFCC33</color>
                    <label>Undecided</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <color>#CC0000</color>
                    <label>Declined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Sort_Order__c</fullName>
        <description>The order upon which this objective is displayed in the mobile UI</description>
        <label>Sort Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Start_Date__c</fullName>
        <description>Date the workflow Starts</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Status__c</fullName>
        <description>Status of workflow objective based on depletion</description>
        <label>Status</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Wines_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicated wines only</description>
        <label>Wines Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Workflow_Type__c</fullName>
        <label>Workflow Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Item Launch</fullName>
                </value>
                <value>
                    <fullName>National Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Key__c</fullName>
        <externalId>true</externalId>
        <label>Workflow Key</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>USA_Workflow</label>
    <nameField>
        <displayFormat>WFID-{0000}</displayFormat>
        <label>Workflow Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USA_Workflows</pluralLabel>
    <recordTypes>
        <fullName>USA_Spirits_Workflow</fullName>
        <active>true</active>
        <description>Workflows for Spirits</description>
        <label>USA Spirits Workflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Wines_Workflow</fullName>
        <active>true</active>
        <description>Workflows for Wines</description>
        <label>USA Wines Workflow</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>